<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">AndroidApplication</string>
    <string name="app_title">IntelliBitz</string>
    <string name="action_settings">Settings</string>
    <string name="sendImage">Share picture via</string>
    <string name="send_media_files">Share media files via</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="intellibitz_desc">mails, chats or just Intellibitz</string>
    <string name="registration">Registration</string>
    <string name="subtitle">Chatty Mails</string>
    <string name="welcome_msg">Welcome to Intellibitz</string>
    <string name="otp_alert">OTP is sent via SMS, Please check your SMS</string>
    <string name="enter_otp">ENTER OTP</string>
    <string name="verify_code">Verify Code</string>
    <string name="note_otp">Note: It may take up to a minute to receive OTP</string>
    <string name="note_verifycode">Note: Verification code is sent to your Email</string>
    <string name="please_wait">Please wait… sending info to server</string>
    <string name="account_landing">Account Landing</string>
    <string name="login">Login</string>
    <string name="create">Create</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="skip">Skip</string>
    <string name="Continue">Continue</string>
    <string name="try_again">Try Again</string>
    <string name="join_company">Join Company</string>
    <string name="invite_users">Invite Users</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="user_notregistered">User not Registred</string>
    <string name="add_avatar">Add Avatar</string>
    <string name="add_avatar_later">Note: You can add a profile pic later from the profile settings menu</string>
    <string name="add_email_snack">Please click add email button to add new email account</string>
    <string name="add_new_email">Add New Email Account</string>
    <string name="add_more_emails">Add More Emails</string>
    <string name="add_email">Add Email</string>
    <string name="gmail">GMail</string>
    <string name="yahoo">Yahoo</string>
    <string name="outlook">Outlook</string>
    <string name="hotmail">Hotmail</string>
    <string name="others">Others</string>
    <string name="delete_email_alert">Do you really want to delete email</string>
    <string name="remove_email_title">Remove Email</string>
    <string name="remove_email_progress">Deleting Email.. Please wait</string>
    <string name="make_admin">Make Admin</string>
    <string name="remove_admin">Remove Admin</string>
    <string name="exit_group">Exit Group</string>
    <string name="startup_lock">Startup Lock</string>
    <string name="enable_startup_lock">Enable Startup Lock</string>
    <string name="enable_chat_email_lock">Enable Chat &amp; Email Lock</string>
    <string name="in_app_lock">in-app lock</string>
    <string name="lock_password">lock password</string>
    <string name="unlock_app">Unlock Intellibitz</string>
    <string name="set_password">Set Password</string>
    <string name="note_password">Note:The lock password is the same for both app and in-app locks</string>
    <string name="enter_password">Enter 4digit Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="setting_up_intellibitz_is_easy">Setting up Intellibitz is easy</string>
    <string name="signup">Sign Up</string>
    <string name="login_signup">Login or Sign Up</string>
    <string name="have_acct_signin">Have an account? Sign In</string>
    <string name="company">Company</string>
    <string name="company_accounts">Company Accounts</string>
    <string name="company_list">List Company</string>
    <string name="create_company">Create Company</string>
    <string name="company_type">Company Type</string>
    <string name="enter_company_name">Enter Company Name</string>
    <string name="saved_on_phone">Saved On Phone</string>
    <string name="bring_on_top">Bring On Top</string>
    <string name="select_display_filters">select display filters</string>
    <string name="type_your_message">Type your Message</string>
    <string name="my_account">My Account</string>
    <string name="filter">filter</string>
    <string name="camera_permission">Intellibitz requires Camera &amp; Storage</string>
    <string name="contacts_autocomplete_permission">Intellibitz requires Contacts</string>
    <string name="device_id_permission">Intellibitz requires DeviceID</string>
    <string name="empty_chat_account">You can select a Contact to send chat. Please add Email Accounts to see conversations. </string>
    <string name="empty_email_account">Please add Email Accounts to see conversations</string>
    <string name="add_email_account">Add Email Account</string>
    <string name="email_accounts">Email Accounts</string>
    <string name="people">People</string>
    <string name="clutter_box">ClutterBox</string>
    <string name="inbox">Inbox</string>
    <string name="clear_selection">Clear selection</string>
    <string name="selected">selected</string>
    <string name="done">Done</string>
    <string name="all">All</string>
    <string name="work">Work</string>
    <string name="groups">Groups</string>
    <string name="broadcasts">Broadcasts</string>
    <string name="draft">Draft</string>
    <string name="drafts">Drafts</string>
    <string name="schedules">Schedules</string>
    <string name="favorites">Favorites</string>
    <string name="name">Name</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="mail">Mail</string>
    <string name="main">Main</string>
    <string name="mainbox">Mainbox</string>
    <string name="feeds">Feeds</string>
    <string name="create_new_team">Create New Team</string>
    <string name="create_new_feed">Create New Feed</string>
    <string name="contacts">Contacts</string>
    <string name="stack">Stack</string>
    <string name="stacks">Stacks</string>
    <string name="nest">Nest</string>
    <string name="select_contacts">Select Contacts</string>
    <string name="intellibitzContacts">Contacts</string>
    <string name="profile">Profile</string>
    <string name="profile_info">Profile Info</string>
    <string name="got_invite">Got an Invite?</string>
    <string name="note_get_invites_later">You can accept this later on under the invites tab in Manage Teams menu</string>
    <string name="note_get_invites">You have an Invite(s) from </string>
    <string name="note_no_company">You have not joined any Company</string>
    <string name="note_get_invites_company">You have an invite from your company</string>
    <string name="toolbar_messages_title">Mainbox</string>
    <string name="toolbar_emailaccounts_title">Email Accounts</string>
    <string name="toolbar_importcontacts_title">Contacts</string>
    <string name="toolbar_workcontacts_title">Work Contacts</string>
    <string name="settings">Settings</string>
    <string name="messages">Messages</string>
    <string name="files">Files</string>
    <string name="unsent">Unsent</string>
    <string name="outbox">Outbox</string>
    <string name="toolbar_profile_title">Profile</string>
    <string name="pref_title_help">Help</string>
    <string name="pref_title_profile">Profile</string>
    <string name="pref_title_account">Accounts</string>
    <string name="pref_title_chate">Chats and Emails</string>
    <string name="pref_title_notify">Notifications</string>
    <string name="pref_title_contacts">Contacts</string>
    <string name="pref_title_registration">Registration</string>
    <string name="tidy">Tidy</string>
    <string name="tidy_up">Tidy Up</string>
    <string name="chat_only">Chat Only</string>
    <string name="menu_title_chat">Chat</string>
    <string name="broadcast">Broadcast</string>
    <string name="menu_title_email">Email</string>
    <string name="menu_title_chattymail">Chat+Emails</string>
    <string name="menu_title_reset">Reset</string>
    <string name="menu_title_files">Files</string>
    <string name="menu_title_group">Group</string>
    <string name="forward">Forward</string>
    <string name="flagged">Flagged</string>
    <string name="menu_title_unflagged">UnFlagged</string>
    <string name="menu_title_unread">UnRead</string>
    <string name="new_chat">New Chat</string>
    <string name="new_group">New Group</string>
    <string name="new_broadcast">New Broadcast</string>
    <string name="compose_email">Compose Email</string>
    <string name="ok">Ok</string>
    <string name="menu_title_ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="menu_title_cancel">Cancel</string>
    <string name="menu_title_next">Next</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="resend_verifycode">Resend Verification Code</string>
    <string name="resend_otp_bycall">Get OTP by CALL</string>
    <string name="user_activation">User Activitation</string>
    <string name="request_otp_by_call">Requesting OTP by call</string>
    <string name="menu_title_moveto">Move</string>
    <string name="menu_title_new_nest">New Nest</string>
    <string name="menu_title_new_group">New Group</string>
    <string name="edit_group">Edit Group</string>
    <string name="menu_title_new_message">New Message</string>
    <string name="menu_title_starred">Starred</string>
    <string name="status">Status</string>
    <string name="menu_title_status">Status</string>
    <string name="menu_title_nest">Nest</string>
    <string name="add_to_nest">Add to Nest</string>
    <string name="menu_title_account">Add Email Account</string>
    <string name="menu_title_login">Add Email Account</string>
    <string name="setting">Setting</string>
    <string name="menu_title_settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="menu_title">Menu Title</string>
    <string name="page">Page</string>
    <string name="tab">Tab</string>
    <string name="search">Search</string>
    <string name="menu1">Email Settings</string>
    <string name="menu2">Account Profile</string>
    <string name="menu3">Preferences</string>
    <string name="menu4">Help &amp; Feedback</string>
    <string name="hello_world">Hello world!</string>
    <string name="screen1_title">Chatty Emails</string>
    <string name="screen1_desc">Chat with your friends, family, Relatives over Email anytime anywhere.</string>
    <string name="screen2_title">Group Conversations</string>
    <string name="screen2_desc">Create your own group and share Snapshots, Videos etc. </string>
    <string name="screen3_title">Intellibitz on Web</string>
    <string name="screen3_desc">Get notified with your chatty emails and messages to your laptop</string>
    <string name="title_activity_registration">Register</string>
    <string name="new_email_sub">Subject</string>
    <string name="new_email_to">To</string>
    <string name="new_email_cc">cc</string>
    <string name="new_email_bcc">bcc</string>
    <string name="new_email_body">Enter Message here</string>
    <string name="choose_attachment">Choose Attachment</string>
    <string name="code">Code</string>
    <string name="prompt_getcode">Mobile Number</string>
    <string name="prompt_otp">OTP Code</string>
    <string name="prompt_username">Display Name</string>
    <string name="prompt_email">Email</string>
    <string name="password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="today">today</string>
    <string name="subject">Subject</string>
    <string name="camera_attach">Attach</string>
    <string name="choose_country">Choose Country</string>
    <string name="multiselect_delete">Delete</string>
</resources>