<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/primary"
    android:theme="@style/AppTheme"
    tools:context=".mainbox.message.ChatEmailMessageActivity">
    <item
        android:id="@+id/menu_delete"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:orderInCategory="100"
        android:title="@string/multiselect_delete"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_flag"
        android:icon="@drawable/ic_checkbox_blank_circle_white_18dp"
        android:orderInCategory="200"
        android:title="@string/flagged"
        app:showAsAction="withText|collapseActionView|always" />
    <item
        android:id="@+id/menu_unflag"
        android:icon="@drawable/ic_check_circle_black_18dp"
        android:orderInCategory="300"
        android:title="@string/menu_title_unflagged"
        app:showAsAction="always" />
</menu>
