<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/windowBackground"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="intellibitz.intellidroid.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <!--
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|top"
                    android:contentDescription="@string/app_title"
                    android:src="@drawable/ic_arrow"
                    android:visibility="gone" />
        -->

        <Button
            android:id="@+id/btnCountry"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:enabled="false"
            android:focusable="false"
            android:hint="@string/choose_country" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:focusable="false"
                android:hint="@string/prompt_getcode"
                android:imeActionId="@+id/mobile"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionNone"
                android:inputType="phone"
                android:maxLines="1"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:focusable="false"
                android:hint="@string/prompt_username"
                android:imeActionId="@+id/username"
                android:imeActionLabel="@string/prompt_username"
                android:imeOptions="actionNone"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />


        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:id="@+id/progress"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/resend_otp"
            android:visibility="visible" />

        <Button
            android:id="@+id/btn_resendOTP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/resend_otp_bycall"
            android:visibility="visible" />

        <TextView
            style="@style/TextAppearance.Design.Hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/otp_alert" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_otp"
                android:imeActionId="@+id/otp"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionGo"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true"
                android:text="123456" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/ll_perm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/graydk"
            android:orientation="horizontal"
            android:padding="4dp">

            <TextView
                style="@style/TextAppearance.AppCompat.Inverse"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/device_id_permission" />

            <Button
                android:id="@+id/btn_perm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@color/graydk"
                android:text="@string/grant_permission"
                android:textColor="@color/green"
                android:visibility="visible" />
        </LinearLayout>


    </LinearLayout>
</ScrollView>
