<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_clutteremails_rv"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="0dp"
    android:padding="0dp"
    tools:context="intellibitz.intellidroid.MainActivity">

    <!--
        <LinearLayout
            android:id="@+id/ll_msgsgrppeople_rv_lock"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/default_profile_thread"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone">

            <View
                android:layout_width="200dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:background="@android:drawable/ic_lock_lock"
                android:gravity="center" />
        </LinearLayout>
    -->


    <TextView
        android:id="@+id/tv_id"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_doc_owner_email"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/iv_sender"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="start|center_vertical"
        android:contentDescription="@string/sendImage"
        android:gravity="start"
        android:paddingEnd="4dp"
        android:paddingStart="4dp"
        android:paddingTop="4dp"
        android:src="@drawable/default_profile_thread"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="vertical"
        android:padding="4dp">

        <TextView
            android:id="@+id/tv_subject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:text="@string/subject"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/tv_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/email_accounts"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tv_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="1400"
            android:maxLines="5"
            android:text="@string/messages"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_timestamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="end"
            android:paddingEnd="4dp"
            android:paddingStart="4dp"
            android:text="@string/today"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <ImageView
            android:id="@+id/iv_unread_count"
            android:layout_width="30dp"
            android:layout_height="20dp"
            android:layout_gravity="end"
            android:contentDescription="@string/welcome_msg"
            android:gravity="end"
            android:paddingEnd="4dp"
            android:paddingStart="4dp"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/iv_attach"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="end"
            android:contentDescription="@string/camera_attach"
            android:gravity="end"
            android:src="@drawable/attach_a_file_in_mail"
            android:visibility="invisible" />

    </LinearLayout>
</LinearLayout>

