<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    tools:context="intellibitz.intellidroid.fragment.ProfileItemFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="0dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_rect"
            android:padding="14dp"
            android:text="@string/startup_lock"
            android:textAllCaps="true" />

        <LinearLayout
            android:id="@+id/ll_startuplock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="18dp"
                android:text="@string/enable_startup_lock" />

            <Switch
                android:id="@+id/sw_startuplock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:contentDescription="@drawable/list_item_arrow"
                android:src="@drawable/list_item_arrow"
                android:visibility="gone" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_rect"
            android:padding="14dp"
            android:text="@string/in_app_lock"
            android:textAllCaps="true" />

        <LinearLayout
            android:id="@+id/ll_inapplock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="18dp"
                android:text="@string/enable_chat_email_lock" />

            <Switch
                android:id="@+id/sw_inapplock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:contentDescription="@drawable/list_item_arrow"
                android:src="@drawable/list_item_arrow"
                android:visibility="gone" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_rect"
            android:padding="14dp"
            android:text="@string/lock_password"
            android:textAllCaps="true" />

        <LinearLayout
            android:id="@+id/ll_setpwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="18dp"
                android:text="@string/set_password" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:contentDescription="@drawable/list_item_arrow"
                android:src="@drawable/list_item_arrow" />
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>

